RESOLVED FIXED50214
[GTK] Test fast/events/mouseover-mouseout2.html crashes
https://bugs.webkit.org/show_bug.cgi?id=50214
Summary [GTK] Test fast/events/mouseover-mouseout2.html crashes
Carlos Garcia Campos
Reported 2010-11-30 02:17:41 PST
http://trac.webkit.org/changeset/72787 seems to crash fast/events/mouseover-mouseout2.html on both GTK Linux 32-bit Release and GTK Linux 64-bit Debug bots. See also http://webkit-bots.igalia.com/amd64/svn_72787.core-when_1291031897-_-who_DumpRenderTree-_-why_11.trace.html
Attachments
Patch to fix the crash (2.51 KB, patch)
2010-11-30 02:19 PST, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2010-11-30 02:19:26 PST
Created attachment 75114 [details] Patch to fix the crash
Martin Robinson
Comment 2 2010-11-30 06:30:41 PST
Comment on attachment 75114 [details] Patch to fix the crash Clearing flags on attachment: 75114 Committed r72909: <http://trac.webkit.org/changeset/72909>
Martin Robinson
Comment 3 2010-11-30 06:30:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.