2010-11-30  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Test fast/events/mouseover-mouseout2.html crashes
        https://bugs.webkit.org/show_bug.cgi?id=50214

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::mouseDidMoveOverElement):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_query_tooltip):

Canonical link: https://commits.webkit.org/63368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72909 268f45cc-cd09-0410-ab3c-d52691b4dbfc